styles.css
body {
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 0;
    margin: 0;
}

.section-four {
    padding: 10% 10%;
}

/* Section 1 styles */

.section-one {
    background-color: #1F2937;
    color: #F9FAF8;
}

header h3 {
    font-size: 24px;
}

header p {
    font-size: 18px;
    color: #E5E7EB;
}

.quote {
    font-size: 36px;
    font-style: italic;
    color: #1F2937;
}

header {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.header-links {
    display: flex;
}

ul {
    text-decoration: none;
    list-style: none;
    display: flex;
    gap: 10px;
}

.container {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.text-and-button button {
    background-color: #3882F6;
    color: #E5E7EB;
    font-weight: bold;
    font-size: 15px;
    padding: 12px 30px;
    border-radius: 10px;
    box-shadow: none;
    outline: none;
    border-style: none;
}

/* Section 2 styles */
.section-two {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.images-and-text {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 30px;
    text-align: center;
}

.img-container {
    display: flex;
    flex-direction: column;
    width: 200px;
    height: auto;
    gap: 10px;
}

.img-container img {
    display: flex;
    width: 200px;
    height: 250px;
}

/* Section 3 styles */

.section-three {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.section-three .quote-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
    padding: 20px;
    max-width: 1000px;
}

.quote-person, .quote  {
    margin: 0;
    padding: 0;
}

.quote-person {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}

/* Section 4 styles */

.section-four {
    display: flex;
    justify-content: center;
    align-items: center;
}

.section-four .rectangle {
    background-color: #3882F6;
    color: #E5E7EB;
    display: flex;
    justify-content: space-around;
    border-radius: 5px;
    padding: 50px 100px;
    gap: 10px;
}

.section-four button {
    background-color: #3882F6;
    color: #E5E7EB;
    font-weight: bold;
    font-size: 15px;
    padding: 10px 30px;
    border-radius: 10px;
    box-shadow: none;
    outline: solid;
    border-style: none;
    align-self: center;
}

.section-four h6, .section-four p {
    margin: 5px;
}

.section-four h6 {
    font-size: 20px;
    font-weight: bold;
}

.section-four .text {
    padding: 0px;
}

/* Footer styles */

footer {
    background-color: #1F2937;
    color: #F9FAF8;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    margin: 0;
}

